# Dogfight

./: .gitignore  .pre-commit-config.yaml  README.md  conf.py  pyproject.toml  pytest.ini
docs/: conf.py
docs/source/: conf.py  index.rst
plugins/DogfightCamera/64/: lin.xpl
plugins/DogfightComms/64/: lin.xpl
scripts/: dataset_preprocessing.py  debug_dogfight.py  enjoy_dogfight_rule.py  enjoy_dr3l.py  enjoy_gym_env.py  eval_d3rl.py  human_actor.py  train_d3rl.py  train_dogfight_rule.py  train_gym_env.py  validate_methods.py
src/async_arch/: run_algorithm.py
src/async_arch/algorithms/: algorithm.py
src/async_arch/algorithms/appo/: actor_worker.py  appo.py  appo_utils.py  aux_losses.py  enjoy_appo.py  learner.py  model.py  model_utils.py  policy_manager.py  policy_worker.py  population_based_training.py  shared_buffers.py
src/async_arch/algorithms/appo/scripts/: multi_agent_match.py
src/async_arch/algorithms/appo/tests/: test_model.py  test_rnn.py
src/async_arch/algorithms/dummy_sampler/: sampler.py
src/async_arch/algorithms/utils/: action_distributions.py  algo_utils.py  arguments.py  evaluation_config.py  pytorch_utils.py
src/async_arch/envs/: create_env.py  env_config.py  env_registry.py
src/async_arch/envs/aircraft/: agent.py  agent_defs.py  aircraft_gym.py  aircraft_params.py  aircraft_utils.py  simulation.py  validate_env_both_rule.py  wrappers.py  xpc.py
src/async_arch/envs/mujoco/: README.md  mujoco_params.py
src/async_arch/utils/: decay.py  env_utils.py  faster_fifo_stub.py  gpu_utils.py  timing.py  utils.py  wandb_utils.py
(+10 files in other folders)
